<resources>
    <string name="app_name">LoginApp1</string>
    <string name="UserName">Email or Phone</string>
    <string name="password">Password</string>
    <string name="todo1">TODO</string>
    <string name="sign_up_for_facebook">Sign Up for Facebook</string>
    <string name="log_in">LOG IN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="todo">TODO</string>
</resources>
