<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="#465195"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="66dp"
        android:layout_height="57dp"
        android:layout_marginStart="175dp"
        android:layout_marginLeft="175dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/logo2" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="37dp"
        android:hint="@string/UserName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@android:color/darker_gray"
        android:textColorHint="@android:color/darker_gray"
        android:textStyle="normal|bold" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="37dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textLongMessage|textPersonName"
        android:textColor="@android:color/darker_gray"
        android:textColorHint="@android:color/darker_gray"
        android:textStyle="normal|bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="37dp"
        android:background="#6C88A5"
        android:text="@string/log_in"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginLeft="98dp"
        android:layout_marginTop="123dp"
        android:text="@string/sign_up_for_facebook"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        tools:layout_marginRight="98dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="218dp"
        android:layout_height="30dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/forgot_password"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        tools:layout_marginRight="140dp"
        android:drawableEnd="@drawable/ic_help_black_24dp"
        android:drawableRight="@drawable/ic_help_black_24dp" />

</LinearLayout>